// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Img /> renders correctly with default props 1`] = `
<img
  alt="alexander dummer 150646"
  className="img lazyload"
  data-sizes="auto"
  data-src="https://policygenius-images.imgix.net/photos/alexander-dummer-150646.jpg?fit=max&auto=format&ch=Width,DPR&w={width}"
  data-srcset="
  https://policygenius-images.imgix.net/photos/alexander-dummer-150646.jpg?fit=max&auto=format&ch=Width,DPR&w={width}&dpr=1 1x,
  https://policygenius-images.imgix.net/photos/alexander-dummer-150646.jpg?fit=max&auto=format&ch=Width,DPR&w={width}&dpr=2 2x,
  https://policygenius-images.imgix.net/photos/alexander-dummer-150646.jpg?fit=max&auto=format&ch=Width,DPR&w={width}&dpr=3 3x,
"
  src={undefined}
  title="alexander dummer 150646"
/>
`;

exports[`<Img /> renders correctly with given imgix picture source props 1`] = `
<picture
  className="picture"
>
  <source
    media="(max-width: 767px)"
    srcSet="https://policygenius-images.imgix.net/small?fit=max&auto=format&ch=Width,DPR&w={width}"
  />
  <source
    media="(max-width: 1024px)"
    srcSet="https://policygenius-images.imgix.net/medium?fit=max&auto=format&ch=Width,DPR&w={width}"
  />
  <img
    alt="default"
    className="img lazyload"
    data-sizes="auto"
    data-src="https://policygenius-images.imgix.net/default.jpg?fit=max&auto=format&ch=Width,DPR&w={width}"
    desktopImgixSrc="large"
    src={undefined}
    title="default"
  />
</picture>
`;

exports[`<Img /> renders correctly with given imgix props 1`] = `
<img
  alt="are cool"
  className="img lazyload cool-class"
  data-sizes="auto"
  data-src="https://policygenius-images.imgix.net/photos/are-cool.jpg?fit=max&auto=format&ch=Width,DPR&w={width}"
  data-srcset="
  https://policygenius-images.imgix.net/photos/are-cool.jpg?fit=max&auto=format&ch=Width,DPR&w={width}&dpr=1 1x,
  https://policygenius-images.imgix.net/photos/are-cool.jpg?fit=max&auto=format&ch=Width,DPR&w={width}&dpr=2 2x,
  https://policygenius-images.imgix.net/photos/are-cool.jpg?fit=max&auto=format&ch=Width,DPR&w={width}&dpr=3 3x,
"
  maxHeight="20"
  maxWidth="10"
  src={undefined}
  title="are cool"
/>
`;

exports[`<Img /> renders correctly with given regular picture source props 1`] = `
<picture
  className="picture"
>
  <source
    media="(max-width: 767px)"
    srcSet="small"
  />
  <source
    media="(max-width: 1024px)"
    srcSet="medium"
  />
  <img
    alt="Alternative"
    className="img lazyload"
    data-sizes="auto"
    data-src="default.jpg"
    desktopSrc="large"
    src={undefined}
    title="default"
  />
</picture>
`;

exports[`<Img /> renders correctly with given regular props 1`] = `
<img
  alt="alt"
  className="img lazyload cool-class"
  data-sizes="auto"
  data-src="some-url"
  data-srcset="some-url"
  maxHeight="20"
  maxWidth="10"
  src={undefined}
  title="title"
/>
`;

exports[`<Img /> renders with hide classes when null src props are provided 1`] = `
<picture
  className="picture hide-mobile-image hide-tablet-image"
>
  <img
    alt="default"
    className="img lazyload"
    data-sizes="auto"
    data-src="https://policygenius-images.imgix.net/default.jpg?fit=max&auto=format&ch=Width,DPR&w={width}"
    src={undefined}
    title="default"
  />
</picture>
`;
